# cookiecutter-pypackage

./: cookiecutter.json  pyproject.toml
.devcontainer/: devcontainer.json
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: .bumpversion.cfg  .pre-commit-config.yaml  CHANGELOG.md  makefile  mkdocs.yml  pyproject.toml  setup.cfg
{{cookiecutter.project_slug}}/.devcontainer/: devcontainer.json
{{cookiecutter.project_slug}}/tests/: test_{{cookiecutter.pkg_name}}.py
{{cookiecutter.project_slug}}/{{cookiecutter.pkg_name}}/: cli.py
